--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -16,12 +16,11 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 :::
 
-The migration of the Helium Network from its L1 to Solana brings several changes to the setup of the
-Network and its associated subDAOs infrastructure. Chief among these changes is moving a lot of data
-that has until now been on-chain (namely PoC data) off-chain.
+The migration of the Helium L1 to the Solana L1 brings several changes to the setup of the Network
+and its associated subDAOs infrastructure. Chief among these changes is moving a lot of data that
+has previously been "on-chain" (namely PoC data) "off-chain".
 
 As such, this migration introduces several Oracles which serve as bridges between the external world
 and the blockchain. These infrastructure changes will allow the Helium Network to effectively
 introduce new Networks as Decentralized Network Protocol (DNP) subDAOs and more easily scale
-existing DNP subDAOs by removing existing bottlenecks. This document outlines the future state of
-the infrastructure post-migration.
+existing DNP subDAOs by removing existing bottlenecks.
