--- a/docs/solana/migration/application-builder.mdx
+++ b/docs/solana/migration/application-builder.mdx
@@ -22,5 +22,5 @@ If you are building against Hotspots, token accounts, or anything blockchain rel
 start with the [Primer on Solana](/solana/primer) and continue through the
 [Solana docs](https://docs.solana.com/).
 
-<!--TODO: uncomment this once oracle data page has content  -->
-<!-- If you are building against the Proof of Coverage datasets, you should read through [Oracle Data](/solana/oracle-data) -->
+If you are building against the Proof of Coverage datasets, you should read through the
+[Data-Transfer Oracles documentation](/oracles/data-transfer-oracles).
