--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -36,11 +36,12 @@ These mint IDs exist both on `mainnet-beta` and `devnet`, so you can test.
 
 ### Mapping Helium Wallets to Solana Wallets
 
-Helium wallets use the same ED25519 curve as Solana wallets. This means that helium public keys
-and secret keys can be mapped directly to a Solana based wallet. 
+Helium wallets use the same ED25519 curve as Solana wallets. This means that Helium public keys and
+secret keys can be mapped directly to a Solana based wallet.
 
-To get the Solana public key equivalent of a helium public key, in javascript you can run:
+To get the Solana public key equivalent of a Helium public key, in javascript you can run:
 
+<!-- prettier-ignore -->
 ```javascript
 import Address from "@helium/address";
 import { PublicKey } from "@solana/web3.js"
@@ -51,8 +52,9 @@ const addr = Address.fromB58("...helium pubkey...");
 new PublicKey(addr.publicKey).toBase58()
 ```
 
-To get a Solana equivalent `Keypair` from a helium `Keypair`:
+To get a Solana equivalent `Keypair` from a Helium `Keypair`:
 
+<!-- prettier-ignore -->
 ```javascript
 import { Keypair } from "@helium/crypto";
 import { Keypair as SolanaKeypair } from "@solana/web3.js"
@@ -75,18 +77,18 @@ To map a keypair:
 solana_sdk::signature::Keypair::from_bytes(helium_keypair.secret_to_vec())
 ```
 
-You can also get the Solana wallet address from a helium wallet address using the migration api:
+You can also get the Solana wallet address from a Helium wallet address using the migration api:
 
 `https://migration.web.test-helium.com/helium/*helium-wallet-address*`
 
 ### Migration
 
-To migrate wallet(s) to Solana, you can use the migration service. Instead of sending all transactions
-to inflate helium state on Solana during the transition period, transactions are instead processed as needed.
-When a user opens their wallet in the helium wallet app, it requests our migration service to get the
-needed transactions, then submits them to Solana.
+To migrate wallet(s) to Solana, you can use the migration service. Instead of sending all
+transactions to inflate Helium state on Solana during the transition period, transactions are
+instead processed as needed. When a user opens their wallet in the Helium Wallet App, it requests
+the migration service to get the needed transactions, then submits them to Solana.
 
-Since exchange wallets may not use the wallet app, you can use the service directly:
+Since exchange wallets may not use the wallet app, the service can be used directly:
 
 For devnet:
 
@@ -94,24 +96,24 @@ For devnet:
 
 This will get the list of serialized transactions, which should be sent to Solana.
 
-To get the Solana wallet address from a helium wallet address, call:
+To get the Solana wallet address from a Helium wallet address, call:
 
 `https://migration.web.test-helium.com/helium/*helium-wallet-address*`
 
-You can also use our command line utility from
-[here](https://github.com/helium/helium-program-library/releases/tag/v0.0.27-migration-cli)
+You can also use the command line utility from
+[here](https://github.com/helium/helium-program-library/releases/tag/v0.0.27-migration-cli).
 
 ```
 $ env MIGRATION_SERVICE_URL=https://migration.web.test-helium.com env SOLANA_URL=https://api.devnet.solana.com env SOLANA_WSS_URL=wss://api.devnet.solana.com ./migration-tx-executor --wallet *your-solana-wallet*
 ```
 
 You can see typescript code demonstrating how to use this
-[here](https://github.com/helium/helium-program-library/blob/master/packages/migration-service/src/test-submit.ts#L37)
+[here](https://github.com/helium/helium-program-library/blob/master/packages/migration-service/src/test-submit.ts#L37).
 
 ## Trustless Wallet Migration
 
 While the above tools are convenient, they rely on our migration service. Luckily, the on-chain
-implementation of the migration is trustless. The full state of the helium chain was converted to a
+implementation of the migration is trustless. The full state of the Helium chain was converted to a
 list of Solana transactions and then compressed into a merkle root on Solana. This means that anyone
 can execute the transactions to inflate a wallet so long as they provide a proper proof that the
 provided transactions are valid. Each transaction is only allowed to be executed once.
