--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -18,8 +18,8 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 <!-- TODO: Nova -->
 
-To migrate your ledger to the Solana network, you will need to download the latest verion of the
-Solana Ledger Application.
+To migrate your Ledger to the Solana L1, you will need to download the latest verion of the Solana
+Ledger Application.
 
 You can then download our migration command line utility via
 
@@ -37,10 +37,10 @@ $
 
 ## Derivation Paths and your new Public Key
 
-The Helium Ledger App uses ED25519 keys, similarly to Solana, but at a different derivation path.
+The Helium Ledger App uses `ED25519`` keys, similarly to Solana, but at a different derivation path.
 
-This means that, while your seed phrase is the same, your private keys are different on Solana.
+This means that, while seed phrases are the same, private keys are different on Solana.
 
 In order to get around this, when you run the migration, the migration application will ask you to
-use the old derivation path to approve sending all of your hotspots, tokens, etc to the new
+use the old derivation path to approve sending all of your Hotspots, tokens, etc to the new
 derivation path.
