--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -55,9 +55,9 @@ These contracts (TODO: Not yet, when it's done link to audit report) have been a
 | Name                              | Description                                                                        |
 | --------------------------------- | ---------------------------------------------------------------------------------- |
 | @helium/lazy-distributor-sdk      | Sdk to the lazy distributor program                                                |
-| @helium/helium-sub-daos-sdk       | Sdk to helium sub daos program                                                     |
+| @helium/helium-sub-daos-sdk       | Sdk to Helium sub daos program                                                     |
 | @helium/data-credits-sdk          | Sdk to the data credits program                                                    |
-| @helium/helium-entity-manager-sdk | Sdk to the helium entity manager program                                           |
+| @helium/helium-entity-manager-sdk | Sdk to the Helium entity manager program                                           |
 | @helium/circuit-breaker-sdk       | Sdk to circuit breaker program                                                     |
 | @helium/treasury-management-sdk   | Sdk to the treasury management program                                             |
 | @helium/voter-stake-registry-sdk  | Sdk to the voter stake registry program                                            |
