--- a/docs/solana/primer.mdx
+++ b/docs/solana/primer.mdx
@@ -16,7 +16,7 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 :::
 
-This guide exists to give an overview of helium data on Solana, and some general Solana programming
+This guide exists to give an overview of Helium data on Solana, and some general Solana programming
 semantics. For a more in-depth guide, check out
 [The Solana Cookbook](https://solanacookbook.com/core-concepts/accounts.html)
 
@@ -26,19 +26,19 @@ At its core, Solana is just a giant Key/Value store. A public key is the key, an
 of data at that value. That blob of data is called an Account. You can imagine Public Keys like a
 primary key in a traditional database.
 
-For example, let's consider this public key: 6r4x69WHPPDzUuMpJ7vwSUiU6e73KJqeoPyZ8nHQTmFP
+For example, let's consider this public key: `6r4x69WHPPDzUuMpJ7vwSUiU6e73KJqeoPyZ8nHQTmFP`
 
 If we check the
 [Solana Explorer, under Anchor Data](https://explorer.solana.com/address/6r4x69WHPPDzUuMpJ7vwSUiU6e73KJqeoPyZ8nHQTmFP/anchor-account?cluster=devnet)
-for this account, we can see that this is a DaoV0 on the devnet helium-sub-daos contract.
+for this account, we can see that this is a DaoV0 on the devnet `helium-sub-daos`` contract.
 
 ![Dao in Explorer](/img/solana/dao-in-explorer.png)
 
-Scrolling up we can see that it is, in fact, owned by the helium sub daos program:
+Scrolling up we can see that it is, in fact, owned by the Helium subDAO's program:
 
 ![Program Owner](/img/solana/program-owner.png)
 
-This means that only the Helium-sub-daos program can make changes to this account. On other chains,
+This means that only the helium-sub-daos program can make changes to this account. On other chains,
 a Program may be called a Smart Contract. Accounts are either owned by a program, or owned by the
 system program. An account owned by the System Program is generally either a wallet (holding
 someone's sol), or an account that has yet to be initialized.
@@ -60,13 +60,13 @@ a one-way hashing to a new address. So, for example,
 the same address. Better yet, the `helium_sub_daos` is able to sign transactions as if it held the
 private key to this PDA.
 
-As you will see, the helium programming model depends heavily on PDAs as indexes into the
+As you will see, the Helium programming model depends heavily on PDAs as indexes into the
 blockchain.
 
 If you imagine the world of Helium Data on Solana as a Graph, PDAs let us hook into particular
 subgraphs.
 
-A great example of this is the relationship between the helium `dao` and the `hnt` mint address. The
+A great example of this is the relationship between the Helium `dao` and the `hnt` mint address. The
 `DaoV0` definition from earlier exists at address:
 
 <!-- prettier-ignore -->
@@ -78,7 +78,7 @@ const daoAddr = daoKey(new PublicKey("...hnt mint..."))[0];
 
 :::note Helium PDAs and Mints
 
-You'll notice that if you trace the graph of helium PDAs, they always lead back to the address of
+You'll notice that if you trace the graph of Helium PDAs, they always lead back to the address of
 either the HNT token mint, or the subdao token mint.
 
 This design is intentional. Rather than making daos, subdaos, etc global, we opted to make them
@@ -180,7 +180,7 @@ const daoAccount = await program.account.daoV0.fetch(new PublicKey("...dao key..
 
 ## Sending Transactions
 
-Transactions are how we modify data on Solana. All helium SDKs use the standard
+Transactions are how we modify data on Solana. All Helium SDKs use the standard
 [Anchor](https://github.com/coral-xyz/anchor) sdk.
 
 That means the interface to all instructions are predictable. You should be able to look at either
