--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -75,14 +75,10 @@ pub merkle_tree: UncheckedAccount<'info>,
 
 ```
 
-While this can make the transaction size larger, the amount of data stored on chain is tiny.
-
-While this may look difficult, this is all neatly packed in the Metaplex Digital Asset API.
-
-This API runs on multiple RPC providers, and allows you to hit convenient functions like
-
-`get_assets_by_owner` and `get_asset_proof` so that you never have to worry about the underlying
-concurrent merkle algorithm.
+While this can make the transaction size larger, the amount of data stored on chain is tiny. While
+this may look difficult, this is all neatly packed in the Metaplex Digital Asset API. This API runs
+on multiple RPC providers, and allows you to hit convenient functions like `get_assets_by_owner` and
+`get_asset_proof` so that you never have to worry about the underlying concurrent merkle algorithm.
 
 ## Fetching Rewardable Entities.
 
@@ -125,7 +121,7 @@ curl --request POST \
 
 ### Hotspots and ECC Compact Keys
 
-Hotspots on the helium network currently are uniquely identified by their ECC Compact Public Keys
+Hotspots on the Helium network currently are uniquely identified by their ECC Compact Public Keys
 
 At onboarding time, hotspots are able to sign an onboard transaction proving physical ownership of
 the device.
@@ -178,18 +174,18 @@ const asset = await getAsset(rpcUrl, assetId)
 The onboarding flow for an entity is general that a customer purchases the hardware from a maker,
 and then self-onboards to the network. Because all hardware are created by approved makers, the
 onboard transaction must be approved by the maker. This uses a similar flow to the legacy
-onboarding-server of the helium blockchain.
+onboarding-server of the Helium blockchain.
 
 The main difference between the Solana version of Helium, and the legacy version on the helium
-chain, is that onboarding is on a per-network basis. A hotspot can be an IOT hotspot, a MOBILE
-hotspot, or both. If the hotspot wants to earn both MOBILE and IOT rewards, it must onboard to the
+chain, is that onboarding is on a per-network basis. A Hotspot can be an IOT hotspot, a MOBILE
+hotspot, or both. If the Hotspot wants to earn both MOBILE and IOT rewards, it must onboard to the
 IOT network AND the MOBILE network. It must also assert location in both.
 
 Similarly, makers are approved for specific subnetworks. A maker that creates IOT hotspots can not
 necessarily onboard MOBILE hotspots. Each network subdao must approve makers to issue rewardable
 entities.
 
-The following test shows the full flow of onboarding a hotspot using the onboarding server.
+The following test shows the full flow of onboarding a Hotspot using the onboarding server.
 
 The [React Native Helium](https://github.com/helium/react-native-helium) SDK should greatly simplify
 this process.
