--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -101,7 +101,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         creation of decentralized, public wireless networks.
       </p>
       <a href="/blockchain">
-        Learn More <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        Learn More <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
       <h5>Quick Links</h5>
       <a className="block" href="/blockchain/blockchain-primitives">
@@ -131,7 +131,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         inexpensive IoT devices and are rewarded $HNT for doing so.
       </p>
       <a href="/mine-hnt">
-        Learn More <img className="linkarrow" src={useBaseUrl('img/icons/linkarrowblue.svg')} />
+        Learn More{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrowblue.svg')} />
       </a>
       <h5>Quick Links</h5>
       <a className="block" href="/mine-hnt">
@@ -161,7 +162,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         robust developer tools.
       </p>
       <a href="/use-the-network">
-        Learn More <img className="linkarrow" src={useBaseUrl('img/icons/linkarrowgreen.svg')} />
+        Learn More{' '}
+        <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrowgreen.svg')} />
       </a>
       <h5>Quick Links</h5>
       <a className="block" href="/use-the-network/devices">
@@ -182,7 +184,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         and advisors.
       </p>
       <a href="/community-governance">
-        Learn More <img className="linkarrow" src={useBaseUrl('img/icons/linkarrowred.svg')} />
+        Learn More <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrowred.svg')} />
       </a>
       <h5>Quick Links</h5>
       <a className="block" href="/community-governance#discord">
