quick like arrow sizing

--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -36,7 +36,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -49,7 +49,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/arduino/lora-vision-shield">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -62,7 +62,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/embit/emb-lr1280s">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
@@ -77,7 +77,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/heltec/cubecell-1-2-aa-node">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -90,7 +90,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/mcci/catena4610">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -105,7 +105,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/midatronics/sharky-module">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
@@ -120,7 +120,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/multi-tech/multi-tech-xdot">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -135,7 +135,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/rakwireless/wisblock-4631">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -150,7 +150,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/seeed-studio/loramodule-e5">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
@@ -165,7 +165,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/sparkfun/pro-rf">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -180,7 +180,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/opensourceinitiative/paxcounter">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -195,7 +195,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
