--- a/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
+++ b/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
@@ -36,7 +36,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/abeeway/abeeway-geolocation-module">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -49,7 +49,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/adeunis/adeunis-field-test-device">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -62,7 +62,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/aquascope/bvs">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -75,7 +75,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/beiselen/radar">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -90,7 +90,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/boatofficer/boatofficerblue">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -103,7 +103,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/bosch/tps110">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -116,7 +116,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/comtac/lpn-td1">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -129,7 +129,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/decentlab/dl-iam">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -142,7 +142,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/develiot/rwmr">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -157,7 +157,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/digital-matter/oyster">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -170,7 +170,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/dragino/rs485-ln">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -183,7 +183,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/enthutech/rs485-ln">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -196,7 +196,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/imst/range-extender">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -209,7 +209,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/iotsens/sound-device">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -222,7 +222,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/izinto/izi-io-4840">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -235,7 +235,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/laird/rs1xx-temp-rh-sensor">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -248,7 +248,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/mcf88/mcf-lw06davk">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -261,7 +261,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/mclimate/vicki">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -276,7 +276,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/milesight-iot/am107">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -289,7 +289,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/moko/lw001-bg">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -302,7 +302,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/netvox/r311a">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -315,7 +315,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/nwave/nps310sm">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -330,7 +330,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/rakwireless/rak7204">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -345,7 +345,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/seeed-studio/sensecap-soil-th">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -358,7 +358,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/sensedge/senstick-pro">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -371,7 +371,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/tektelic/t000489x-smart-room-base">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -384,7 +384,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/tekzitel/tekzipark">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -399,7 +399,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/the-things-products/the-things-node">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -412,7 +412,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -425,7 +425,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/origo/lorawan-watch">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
